--- a/RADIO/app/src/main/res/layout/row_last_song.xml
+++ b/RADIO/app/src/main/res/layout/row_last_song.xml
@@ -1,59 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    app:cardBackgroundColor="@android:color/white"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/Nom"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="19dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="25dp"
-        android:text="Nom :"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/cover"
-        android:layout_toEndOf="@+id/cover" />
+        android:padding="20dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/nom_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="26dp"
-        android:layout_marginStart="80dp"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/Nom"
-        android:layout_toEndOf="@+id/cover" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/cover"
-        android:anyDensity="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="12dp"
-      />
+            <TextView
+                android:id="@+id/name_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="Titre" />
 
-    <TextView
-        android:id="@+id/Artist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Artiste :"
-        android:layout_alignBottom="@+id/cover"
-        android:layout_alignLeft="@+id/Nom"
-        android:layout_alignStart="@+id/Nom" />
+            <TextView
+                android:id="@+id/artist_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="Artiste" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/artist_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="62dp"
-        android:layout_alignBottom="@+id/cover"
-        android:layout_alignLeft="@+id/Nom"
-        android:layout_alignStart="@+id/Nom" />
-
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/cover"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_launcher" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
