--- a/RADIO/app/src/main/res/layout/home_view.xml
+++ b/RADIO/app/src/main/res/layout/home_view.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/layout_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView"
@@ -38,8 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView5"
         android:layout_alignBottom="@+id/textView5"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignStart="@+id/textView4"
+        android:layout_alignLeft="@+id/layout_name"
+        android:layout_alignStart="@+id/layout_name"
         android:text="Sociaux"
         android:textAlignment="center"
         android:textStyle="bold" />
