--- a/RADIO/app/src/main/res/layout/home_layout.xml
+++ b/RADIO/app/src/main/res/layout/home_layout.xml
@@ -65,11 +65,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/play"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/name"
+        android:layout_marginTop="9dp"
+        android:layout_alignTop="@+id/layout_name"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/lastSong"
