--- a/RADIO/app/src/main/res/layout/row_last_song.xml
+++ b/RADIO/app/src/main/res/layout/row_last_song.xml
@@ -1,13 +1,13 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@android:color/white"
+    app:cardBackgroundColor="@android:color/transparent"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:padding="5dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -20,7 +20,9 @@
             <TextView
                 android:id="@+id/name_search"
                 android:layout_width="match_parent"
+                android:padding="3dp"
                 android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:text="Titre" />
 
@@ -28,6 +30,8 @@
                 android:id="@+id/artist_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:textColor="#EF416C"
                 android:textSize="15sp"
                 android:text="Artiste" />
         </LinearLayout>
