--- a/RADIO/app/src/main/res/layout/row_last_song.xml
+++ b/RADIO/app/src/main/res/layout/row_last_song.xml
@@ -40,6 +40,10 @@
             android:id="@+id/cover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             app:srcCompat="@mipmap/ic_launcher" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
